apps/localproxy/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: localproxy
  labels:
    name: localproxy
