apps/localproxy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: localproxy-svc
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: "localproxy-svc"
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: "false"
spec:
  ports:
    - name: 80-tcp
      port: 80
