apps/localproxy/ingress-homebridge.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localproxy-homebridge-ingress
  annotations:
    cluster-config/suffix-host: "true"
    cluster-config/suffix-tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: security-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: homebridge.SUFFIX
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: localproxy-svc
                port:
                  number: 80
  tls:
    - secretName: homebridge-tls
      hosts:
        - homebridge.SUFFIX
