apps/localproxy/ingress-scrypted.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localproxy-scrypted-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/websocket: "true"
    traefik.ingress.kubernetes.io/router.middlewares: security-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: scrypted.home.arpa  # cluster-specific: NETWORK_HOSTNAME_SUFFIX
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: localproxy-svc
                port:
                  number: 80
  tls:
    - secretName: scrypted-tls
      hosts:
        - scrypted.home.arpa  # cluster-specific: NETWORK_HOSTNAME_SUFFIX
